dev-3.x-Bug-4374: Updates to IntelHostAgentFactory to handle login id & password. If not provided by user then search for it in the pre-registration table.